force-app/main/default/objects/FinancialAccountFee/FinancialAccountFee.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>