force-app/main/default/objects/FinancialAccountFee/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account Fees</relationshipLabel>
    <relationshipName>Financial_Account_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>