force-app/main/default/objects/FinancialAccountFee/fields/Amount_With_type__c.field-meta.xml
<CustomField>
    <fullName>Amount_With_type__c</fullName>
    <formula>&quot;₹&quot; &amp; &quot; &quot; &amp; TEXT( Amount ) &amp; &quot; &quot; &amp; TEXT(Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount With type</label>
    <type>Text</type>
</CustomField>