force-app/main/default/objects/FinancialAccountFee/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Financial Account Fees</relationshipLabel>
    <relationshipName>Financial_Account_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>